core/main/default/objects/QuoteLineItem/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Used to tie a quote line to a specific Account. Use this if you enable the Match QLI Account to SA Account setting to map which sales agreements this quote line will be added to.</description>
    <inlineHelpText
  >Used to tie a quote line to a specific Account. Use this if you enable the Match QLI Account to SA Account setting to map which sales agreements this quote line will be added to.</inlineHelpText>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>