core/main/default/objects/QuoteLineItem/fields/SalesAgreementKey__c.field-meta.xml
<CustomField>
    <fullName>SalesAgreementKey__c</fullName>
    <description
  >Adds this quote line to the Sales Agreement that has the same key.</description>
    <inlineHelpText
  >Adds this quote line to the Sales Agreement that has the same key.</inlineHelpText>
    <label>Sales Agreement Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>